# project_repo

./: main.cpp  main2.cpp
Leibniz_formula/: main  main.cpp  main.cpp~
clonable_class/version_1/: Base.hpp  Composer.cpp  Composer.cpp~  Composer.hpp  Composer.hpp~  Makefile  main  main.cpp~
clonable_class/version_2/: Composer.cpp  Composer.cpp~  Composer.hpp  Composer.hpp~  Derived.hpp  Makefile  main  main.cpp
compilation_error/: a.out  compilation_error.cpp
compute_square_root/: a.out  compute_square_root.cpp  main
dealii_try/: Makefile  Makefile~  step1.cpp
dealii_try/step1/: CMakeLists.txt
dealii_try/step2/: CMakeLists.txt  CMakeLists.txt~  main.cpp
dealii_try/step26/: CMakeLists.txt  main.cpp
dealii_try/step3/: CMakeLists.txt  main.cpp
dealii_try/step37/: CMakeLists.txt  main.cpp
dealii_try/step4/: CMakeLists.txt  main.cpp
inheritance/: #main.cpp#  Base.hpp  Base.hpp~  Derived.hpp  Derived.hpp~  main  main.cpp~
insertion/: Makefile  main  main.cpp  main.cpp~
metaprogramming/: complex.hpp  complex.hpp~  dot-product.hpp  dot-product.hpp~
moving_semantic/basic_class/: Foo.cpp  Foo.hpp  main  main.cpp
moving_semantic/exercise/: Makefile  Makefile~  Norms.hpp  Norms2.hpp  main  main.cpp  main.cpp~
moving_semantic/simple_program/: Makefile  Makefile~  main  main.cpp  main.cpp~
my_subfolder/: main.cpp  main2.cpp  myclass.hpp  new_class.hpp
simpson_quadrature/: a.out  main  simpson.cpp
streams/reading_spaces/: main  (+5 more)
templates/: DerPoly.hpp  DerPoly.hpp~  Makefile  PowPoly.hpp~  main  main_polynomials.cpp  monomials.hpp  polynomials.hpp
(+10 files in other folders)
